# trading-journal-v2

./: .gitignore  README.md  netlify.toml
backend/: .env.example  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routes/: __init__.py  stats.py  trades.py  uploads.py
backend/app/services/: __init__.py  statistics.py  storage.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  config.js  config.prod.js
